# object_recognition

./: .gitignore  CMakeLists.txt  README.md  all.launch  debug.rviz  describe_all.launch  describe_all_shot1344.launch  describe_all_shot352.launch  filter_pointclouds.launch  object.launch  package.xml  publish_all.launch  publish_object.launch  publish_pcds.launch  publish_world.launch  recognition.launch  segment_objects.launch  world.launch
launch/: all.launch  describe_all_shot1344.launch  filter_pointclouds.launch  publish_pcds.launch  recognition.launch  segment_objects.launch
msg/: NARF.msg  NARF_bundle.msg  Shot1344.msg  Shot1344_bundle.msg  Shot352.msg  Shot352_bundle.msg
pcds/: object0.pcd  object2.pcd
src/: create_pointcloud.cpp  depthimage_to_NARF.cpp  depthimage_to_NARF.h  pcd_to_descriptors.cpp  pcd_to_descriptors.h  pcd_to_pointcloud.cpp  pcd_to_pointcloud.h  pointcloud_to_descriptors.cpp  pointcloud_to_descriptors.h  recognize.cpp  recognize.h  segmentation.cpp  segmentation.h
