<?xml version="1.0"?>
<package>
  <name>object_recognition</name>
  <version>0.0.1</version>
  <description>Find a given object in a scene</description>

  <maintainer email="kai@kaifranke.com">Kai Franke</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>roslib</run_depend>

</package>
